--- a/MigrationService/appsettings.json
+++ b/MigrationService/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WIN-UPBD8VRC5P1\\SQLEXPRESS;Database=MigrationService;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=WIN-UPBD8VRC5P1\\SQLEXPRESS;Database=MigrationService;Trusted_Connection=True;TrustServerCertificate=True;",
+    "FlightSchoolConnection": "Server=WIN-UPBD8VRC5P1\\SQLEXPRESS;Database=FlightSchool;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
 
